# docqa

./: README.md  pyproject.toml
data/: README.md
docqa/: app.py  templating.py  utils.py
docqa/static/: main.css
docqa/templates/: base.html  index.html  qa.html  show.html
docqa/templates/includes/: fail.html  header.html  pass.html  rm.html
