[tool.poetry]
name = "docqa"
version = "0.1.0"
description = "interactive json document qa webapp"
authors = ["granitosaurus <tinarg@protonmail.com>"]
license = "GPL-3.0-or-later"
readme = 'README.md'

[tool.poetry.dependencies]
python = "^3.8"
flask = "^1.1.1"
tinydb = "^3.15.2"
w3lib = "^1.21.0"
more_itertools = "^8.0.2"
requests = "^2.22.0"
requests-cache = "^0.5.2"

[tool.poetry.dev-dependencies]
ptpython = "^2.0.6"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
